--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfolio",
+  "name": "shahrierhossain",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -19,11 +19,11 @@
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "framer-motion": "^10.12.17",
-    "mailgun-js": "^0.22.0",
-    "next": "^15.0.0-canary.178",
-    "next-optimized-images": "^2.6.2",
-    "postcss": "8.4.24",
-    "react": "18.2.0",
+    "mailgun-js": "^0.6.7",
+    "next": "^15.1.0",
+    "next-optimized-images": "^2.0.2",
+    "postcss": "^8.4.49",
+    "react": "^19.0.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
