--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-email/components": "^0.0.25",
+    "@react-email/components": "^0.0.13",
     "@react-email/tailwind": "^0.1.0",
     "@types/node": "20.3.2",
     "@types/react": "^18.3.11",
@@ -19,11 +19,11 @@
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "framer-motion": "^10.12.17",
-    "mailgun-js": "^0.6.7",
+    "mailgun-js": "^0.22.0",
     "next": "^15.1.0",
-    "next-optimized-images": "^2.0.2",
+    "next-optimized-images": "^1.4.2",
     "postcss": "^8.4.49",
-    "react": "^19.0.0",
+    "react": "^18.0.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
