Contact Form Completed

--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
 NEXT_PUBLIC_SITE_URL=http://localhost:3000
 MAILGUN_API_KEY=522ec6bb42e30fa8ccc70cd7b5f3d512-3724298e-86617f28
 MAILGUN_DOMAIN=sandboxb43e0f0c87dc46a4af2794c5f422aa85.mailgun.org
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=465
+SMTP_SERVICE=gmail
+SMTP_USER=hossainshahrier.sh@gmail.com
+SMTP_PASSWORD=lthv usbl yzak qkni
