--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "framer-motion": "^10.12.17",
-    "mailgun-js": "^0.22.0",
     "next": "^15.1.0",
     "next-optimized-images": "^1.4.2",
+    "nodemailer": "^7.0.5",
     "postcss": "^8.4.49",
     "react": "^18.0.0",
     "react-dom": "18.2.0",
@@ -36,6 +36,7 @@
   },
   "devDependencies": {
     "@types/mailgun-js": "^0.22.18",
+    "@types/nodemailer": "^7.0.1",
     "@types/react-vertical-timeline-component": "^3.3.3"
   }
 }
