--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shahrierhossain",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
@@ -11,32 +11,43 @@
   "dependencies": {
     "@react-email/components": "^0.0.13",
     "@react-email/tailwind": "^0.1.0",
-    "@types/node": "20.3.2",
-    "@types/react": "^18.3.11",
-    "@types/react-dom": "^18.3.0",
     "autoprefixer": "10.4.14",
     "clsx": "^1.2.1",
-    "eslint": "8.43.0",
-    "eslint-config-next": "13.4.7",
     "framer-motion": "^10.12.17",
-    "next": "^15.1.0",
+    "mailgun-js": "^0.22.0",
+    "next": "^15.5.0",
     "next-optimized-images": "^1.4.2",
-    "nodemailer": "^7.0.5",
     "postcss": "^8.4.49",
-    "react": "^18.0.0",
-    "react-dom": "18.2.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-intersection-observer": "^9.5.2",
     "react-vertical-timeline-component": "^3.6.0",
     "resend": "^4.0.0",
-    "sharp": "^0.33.5",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.1.5"
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
-    "@types/mailgun-js": "^0.22.18",
-    "@types/nodemailer": "^7.0.1",
-    "@types/react-vertical-timeline-component": "^3.3.3"
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "@typescript-eslint/eslint-plugin": "^8.40.0",
+    "@typescript-eslint/parser": "^8.40.0",
+    "eslint": "^9.34.0",
+    "eslint-config-next": "15.5.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "eslint-plugin-unused-imports": "^4.2.0",
+    "prettier": "^3.6.2",
+    "tailwindcss": "^4",
+    "tw-animate-css": "^1.3.7",
+    "typescript": "^5.9.2"
+  },
+  "packageManager": "yarn@4.9.3",
+  "engines": {
+    "node": ">=20.0.0"
   }
 }
