--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-email/components": "^0.0.13",
-    "@react-email/tailwind": "^0.1.0",
+    "@react-email/components": "^0.5.1",
+    "@react-email/tailwind": "^1.2.2",
     "autoprefixer": "10.4.14",
     "clsx": "^1.2.1",
-    "framer-motion": "^10.12.17",
+    "framer-motion": "^12.23.12",
     "mailgun-js": "^0.22.0",
     "next": "^15.5.0",
     "next-optimized-images": "^1.4.2",
+    "nodemailer": "^7.0.5",
     "postcss": "^8.4.49",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -29,10 +30,12 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.12",
     "@types/node": "^20",
+    "@types/nodemailer": "^7",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-vertical-timeline-component": "^3.3.6",
     "@typescript-eslint/eslint-plugin": "^8.40.0",
     "@typescript-eslint/parser": "^8.40.0",
     "eslint": "^9.34.0",
@@ -46,8 +49,11 @@
     "tw-animate-css": "^1.3.7",
     "typescript": "^5.9.2"
   },
+  "overrides": {
+    "eslint": "^9.34.0"
+  },
   "packageManager": "yarn@4.9.3",
   "engines": {
-    "node": ">=20.0.0"
+    "node": ">=24.0.0"
   }
 }
